# wsa

./: CMakeLists.txt  README.md
inc/: wsa.h
wayland/: CMakeLists.txt
wayland/inc/: wsa_wayland_priv.h
wayland/src/: wsa_wayland.c
